find good hyperparam sets karel

--- a/Code/evaluation/karel_evaluation.ipynb
+++ b/Code/evaluation/karel_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,13 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 1"
    ]
   },
   {
@@ -10330,6 +10337,86 @@
    ],
    "source": [
     "plot_interactive_3d(my_dict, hyperparam1='l1', hyperparam2='lr')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = [\"eval12_stair_sweep34_noFE.pkl\", \"eval8_maze_sweep28_noFE.pkl\", \"eval12_fourcorner_sweep40_noFE.pkl\", \"eval12_top_sweep50_noFE.pkl\" ]\n",
+    "my_dicts = []\n",
+    "base_path = \"../scripts/evaluation/karel/paper/\"\n",
+    "for file in files:\n",
+    "    file_path = base_path + file\n",
+    "    with open(file_path, 'rb') as f:\n",
+    "        my_dict = pickle.load(f)\n",
+    "        my_dicts.append(my_dict)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract the mutual hyperparameters that resulted in avr reward == 1\n",
+    "from operator import itemgetter\n",
+    "keys_to_get = [\"hidden_size\", \"lr\", \"ent_coef\", \"clip_coef\", \"l1\"]\n",
+    "getter = itemgetter(*keys_to_get)\n",
+    "\n",
+    "good_sets = []\n",
+    "for dict in my_dicts:\n",
+    "    good_sets_task = [getter(info[\"params\"])  for avg_reward, info in dict if avg_reward == 1.]\n",
+    "    good_sets.append(good_sets_task)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the intersection (overlapping elements) among all good_sets from each task\n",
+    "common_elements = set(good_sets[0])\n",
+    "for gs in good_sets[1:]:\n",
+    "    common_elements &= set(gs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8,\n",
+       " {(32, 0.001, 0.01, 0.01, 0.0),\n",
+       "  (32, 0.001, 0.1, 0.01, 0.0),\n",
+       "  (32, 0.001, 0.1, 0.1, 0.0),\n",
+       "  (32, 0.001, 0.1, 0.2, 0.0),\n",
+       "  (64, 0.001, 0.01, 0.01, 0.0),\n",
+       "  (64, 0.001, 0.1, 0.01, 0.0),\n",
+       "  (64, 0.001, 0.1, 0.1, 0.0),\n",
+       "  (64, 0.001, 0.1, 0.2, 0.0)})"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(common_elements), common_elements"
    ]
   }
  ],
